@@ -90,6 +90,7 @@
     <File name="MonoDevelop.Xml.StateEngine/XState.cs" subtype="Code" buildaction="Nothing" />
     <File name="MonoDevelop.Xml.StateEngine/XmlChar.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
