@@ -1,3 +1,13 @@
+2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlMultipleClosingTagCompletionData.cs:
+	Add additional closing elements to the completion list for all parent
+	elements, that also close all intermediate elements.
+
+	* Makefile.am:
+	* MonoDevelop.XmlEditor.mdp: Updated.
+
 2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Makefile.am: Fix build dependencies.
